--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'BR'
 - !lcsh 'Baptists -- Sermons'
 - !lcsh 'Sermons, English -- 19th century'
+- GITenberg
 tableOfContents: The sluggard's farm -- The broken fence -- Frost and thaw -- The
   corn of wheat dying to bring forth fruit -- The ploughman -- Ploughing the rock
   -- The parable of the sower -- The principal wheat -- Spring in the heart -- Farm
